Before changing evalCode to div

--- a/html/index.html
+++ b/html/index.html
@@ -112,53 +112,53 @@
                     <span>&copy; </span>
                 <span class="csButton blueButton" id="CreativeScripts" title="<span style='text-align:center'><div><img src='../img/CreativeScriptsLogo.png' style='width:200px;'></img><div><h1>www.creative-scripts.com</h1>Custom Scripts &amp; Extensions</span>">Creative Scripts
                 </span>
-                <span id="donateBT" class="csButton blueButton" style="padding: 0px 4px 0px;margin: 0 4px 0 0;position: relative;top: 2px;" title="Lisence CSTK for $10<br>CSTK is not free it's trialware<br>It does not have a time trial limit<br><b>BUT</b> please purchase when you are satisfied<br>that it's worth the $10"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" style="width: 16px;position: relative; top: 5px;"><path fill="#FFF" d="M111.4 295.9c-3.5 19.2-17.4 108.7-21.5 134-.3 1.8-1 2.5-3 2.5H12.3c-7.6 0-13.1-6.6-12.1-13.9L58.8 46.6c1.5-9.6 10.1-16.9 20-16.9 152.3 0 165.1-3.7 204 11.4 60.1 23.3 65.6 79.5 44 140.3-21.5 62.6-72.5 89.5-140.1 90.3-43.4.7-69.5-7-75.3 24.2zM357.1 152c-1.8-1.3-2.5-1.8-3 1.3-2 11.4-5.1 22.5-8.8 33.6-39.9 113.8-150.5 103.9-204.5 103.9-6.1 0-10.1 3.3-10.9 9.4-22.6 140.4-27.1 169.7-27.1 169.7-1 7.1 3.5 12.9 10.6 12.9h63.5c8.6 0 15.7-6.3 17.4-14.9.7-5.4-1.1 6.1 14.4-91.3 4.6-22 14.3-19.7 29.3-19.7 71 0 126.4-28.8 142.9-112.3 6.5-34.8 4.6-71.4-23.8-92.6z"/></svg>
-                        </span>
+                <span id="donateBT" class="csButton blueButton" style="padding: 4px 4px 0px;margin: 0 4px 0 0;position: relative;top: 2px;" title="Lisence CSTK for $10<br>CSTK is trialware<br>It does not have a time trial limit<br><b>BUT</b> please purchase when you are satisfied<br>it's worth the $10">
+                <i class="fab fa-paypal fa-2x fabt"></i>
+                </span>
                 </span>
             </div>
             <div style="font-size: .75em;">Console Mode
-                <span title="Set console mode to JS" id="jsModeBT" class="label csButton greyButton" style="color: black;text-shadow: none; position: relative;bottom: 2px;margin: 0 4px 4px 0;">JS
+                <span title="Set console mode to JS" id="jsModeBT" class="label csButton greyButton" style="color: black;text-shadow: none;margin: 0 4px 4px 0;">JS
                 </span>
-                <span title="Set console mode to JSX" id="jsxModeBT" class="label csButton greenButton" style="color: black;text-shadow: none; position: relative;bottom: 2px;margin: 0 4px 4px 0;">JSX
+                <span title="Set console mode to JSX" id="jsxModeBT" class="label csButton greenButton" style="color: black;text-shadow: none;margin: 0 4px 4px 0;">JSX
                 </span>
-                <span title="Set console mode to Shell" id="execModeBT" class="label csButton greyButton" style="color: black;text-shadow: none; position: relative;bottom: 2px;margin: 0 4px 4px 0;">Shell
+                <span title="Set console mode to Shell" id="execModeBT" class="label csButton greyButton" style="color: black;text-shadow: none;margin: 0 4px 4px 0;">Shell
                 </span>
-                <div style="display: inline-block;">
-                    <span id="configBT" class="csButton blueButton" style="padding: 0px 4px 0px;margin: 0 4px 0 0;" title="Show config options">
-                        <i class="fas fa-wrench fa-lg"></i>
+                <div style="display: inline-block;margin-bottom: 4px;">
+                    <span id="configBT" class="csButton blueButton" style="width: 18px;padding: 0px 4px 0px;margin: 0 4px 0 0;" title="Show / hide config options">
+                        <i class="fas fa-wrench fa-lg fabt"></i>
                     </span>
-                    <span id="zoomOut" class="csButton blueButton" style="padding: 0px 4px 0px;margin: 0 4px 0 0;" title="Decrease console font size">
-                        <i class="fas fa-search-minus fa-lg"></i>
+                    <span id="zoomOut" class="csButton blueButton" style="width: 18px;padding: 0px 4px 0px;margin: 0 4px 0 0;" title="Decrease console font size">
+                        <i class="fas fa-search-minus fa-lg fabt"></i>
                     </span>
-                    <span id="zoomIn" class="csButton blueButton" style="padding: 0px 4px 0px;margin: 0 4px 0 0;" title="Increase console font size">
-                        <i class="fas fa-search-plus fa-lg"></i>
+                    <span id="zoomIn" class="csButton blueButton" style="width: 18px;padding: 0px 4px 0px;margin: 0 4px 0 0;" title="Increase console font size">
+                        <i class="fas fa-search-plus fa-lg fabt"></i>
                     </span>
-                    <span id="openSnippetBT" class="csButton blueButton" style="padding: 0px 4px 0px; margin: 0 4px 0 0px; " title="Open Snippet">
-                        <i class="fas fa-folder-open fa-lg"></i>
+                    <span id="openSnippetBT" class="csButton blueButton" style="width: 18px;padding: 0px 4px 0px; margin: 0 4px 0 0px; " title="Open Snippet">
+                        <i class="fas fa-folder-open fa-lg fabt"></i>
                     </span>
-                    <span id="saveSnippetBT" class="csButton blueButton" style="padding: 0px 4px 0px; margin: 0 4px 0 0px; " title="Save Snippet">
-                        <i class="fas fa-save fa-lg"></i>
+                    <span id="saveSnippetBT" class="csButton blueButton" style="width: 18px;padding: 0px 4px 0px; margin: 0 4px 0 0px; " title="Save Snippet">
+                        <i class="fas fa-save fa-lg fabt"></i>
                     </span>
                 </div>
             </div>
             <div id="configDiv" style="display: none;max-width: 300px;text-align: left; border: 3px solid blue;margin: 8px auto;border-radius: 5px;padding: 5px;">
                 <div style="font-size: .7em;position: relative;right: 0;display: block;">
                     <span id="closeConfigBT" style="float: right; position: relative;right: 0;" title="Hide config options">
-                        <i class="fas fa-window-close fa-lg"></i>
+                        <i class="fas fa-window-close fa-lg fabt"></i>
                     </span>
                     <div id="resultModeDV">
-                        <i class="fas fa-check-square fa-lg"></i> Include snippet in results
+                        <i class="fas fa-check-square fa-lg fabt"></i> Include whole snippets in results
                     </div>
-                    <!-- <input class="chbx" type="checkbox" id="resultModeRB" name="evalMode" checked style="display: none;"> -->
-                    <!-- <label id="resultModeLB" for="resultModeRB">Include snippet in results</label> -->
                 </div>
             </div>
             <div style="font-size: .75em;display: inline-block;">
                 <div style="display: block;">
                     <div style="display:inline-block;">
-                        <span id="EVAL" class="csButton greenButton" style="margin: 2px 4px 4px 4px;" title='Execute the selected snippet in as a JSX script.<br>Shift+Ctrl+A to execute the whole snippet<br>Shift+Enter to execute only selected lines'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="width: 16px;position: relative; top: 5px;"><path fill="#FFF" d="M257.981 272.971L63.638 467.314c-9.373 9.373-24.569 9.373-33.941 0L7.029 444.647c-9.357-9.357-9.375-24.522-.04-33.901L161.011 256 6.99 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L257.981 239.03c9.373 9.372 9.373 24.568 0 33.941zM640 456v-32c0-13.255-10.745-24-24-24H312c-13.255 0-24 10.745-24 24v32c0 13.255 10.745 24 24 24h304c13.255 0 24-10.745 24-24z"/></svg> EXECUTE SNIPPET</span>
+                        <span id="EVAL" class="csButton greenButton" style="margin: 2px 4px 4px 4px;" title='Execute the selected snippet in as a JSX script.<br>Shift+Ctrl+A to execute the whole snippet<br>Shift+Enter to execute only selected lines'>
+                        <i class="fas fa-terminal fa-lg fabt"></i> EXECUTE <span id="EvalMode">JSX</span></span>
                     </div>
-                    <div style="display:inline-block;text-align:left;font-size:.8em;line-height:1.2em;position: relative;top:3px;">
+                    <div style="display:inline-block;text-align:left;font-size:.8em;line-height:1.2em;position: relative;top:6px;">
                         <div>Press Shift+Enter to execute only selected lines</div>
                         <div>Press Shift+Ctrl+A to execute the whole snippet</div>
                     </div>
@@ -177,13 +177,17 @@
                 <div id="SetWarning" style="color: red; background: white; border-radius: 5px;font-style: bold; padding: 5px; margin-bottom: 15px; display: none;">
                 </div>
                 <div>
-                    <span id="openFolders" class="csButton blueButton" style="padding: 0px 4px 0px;margin: 0 0px 0 0" title=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="width: 16px;position: relative; top: 5px;" ><path fill="#FFF" d="M128 116V76c0-8.837 7.163-16 16-16h352c8.837 0 16 7.163 16 16v40c0 8.837-7.163 16-16 16H144c-8.837 0-16-7.163-16-16zm16 176h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zM16 144h64c8.837 0 16-7.163 16-16V64c0-8.837-7.163-16-16-16H16C7.163 48 0 55.163 0 64v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16z"/></svg>
+                    <span id="openFolders" class="csButton blueButton" style="padding: 0px 4px 0px;margin: 0 0px 0 0" title="Show Extension Tools">
+                        <i class="fas fa-list fa-lg fabt"></i>
                     </span>
-                    <a href="./index.html"><span id="restartExt3" class="csButton blueButton" style="padding: 0px 4px 0px;margin: 0 0px 0 0" title="Restart CSTK"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="width: 16px;position: relative; top: 5px;"><path fill="#FFF" d="M370.72 133.28C339.458 104.008 298.888 87.962 255.848 88c-77.458.068-144.328 53.178-162.791 126.85-1.344 5.363-6.122 9.15-11.651 9.15H24.103c-7.498 0-13.194-6.807-11.807-14.176C33.933 94.924 134.813 8 256 8c66.448 0 126.791 26.136 171.315 68.685L463.03 40.97C478.149 25.851 504 36.559 504 57.941V192c0 13.255-10.745 24-24 24H345.941c-21.382 0-32.09-25.851-16.971-40.971l41.75-41.749zM32 296h134.059c21.382 0 32.09 25.851 16.971 40.971l-41.75 41.75c31.262 29.273 71.835 45.319 114.876 45.28 77.418-.07 144.315-53.144 162.787-126.849 1.344-5.363 6.122-9.15 11.651-9.15h57.304c7.498 0 13.194 6.807 11.807 14.176C478.067 417.076 377.187 504 256 504c-66.448 0-126.791-26.136-171.315-68.685L48.97 471.03C33.851 486.149 8 475.441 8 454.059V320c0-13.255 10.745-24 24-24z"/></svg>
+                    <span id="openConsole" class="csButton blueButton" style="padding: 0px 4px 0px;margin: 0 0px 0 0; display: none;" title="Show console">
+                        <i class="fas fa-terminal fa-lg fabt"></i>
+                    </span>
+                    <a href="./index.html"><span id="restartExt3" class="csButton blueButton" style="padding: 0px 4px 0px;margin: 0 0px 0 0" title="Restart CSTK">
+                        <i class="fas fa-sync fa-lg fabt"></i>
                 </span></a>
                     <span id="help" class="csButton blueButton" style="padding: 0px 4px 0px;margin: 0 0px 0 0" title="Open CSTK Github page">
-                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="width: 16px;position: relative; top: 5px;"><path fill="#FFF" d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
-                    </svg>
+                        <i class="fab fa-github fa-lg fabt"></i>
             </span>
                     <span id="hostAppInfo" style="white-space:nowrap;font-size: .8em;"></span>
                 </div>
