Need to change mod dates Sign extension Change Icon move to com folder

--- a/html/index.html
+++ b/html/index.html
@@ -148,7 +148,7 @@
                         <i class="fas fa-window-close fa-lg fabt"></i>
                     </span>
                     <div id="resultModeDV">
-                        <i class="fas fa-check-square fa-lg fabt"></i> Include whole snippets in results
+                        <i class="far fa-check-square fa-lg fabt"></i> Include whole snippets in results
                     </div>
                 </div>
             </div>
@@ -166,10 +166,10 @@
                 <!-- Icons from Font Awesome -->
             </div>
             <div style="margin-top: 4px;">
-                <div id="cwd" class="" style="background: white; color: red;text-align: left;width: 95%;margin: auto;display: none;padding: 5px;font-size: .75em;font-family:'Free Monospaced';line-height:1.2em;font-weight: 800;font-family: 'Free Monospaced';"><span id="pwd"></span>
+                <div id="cwd" style="background: white; color: red;text-align: left;width: 95%;margin: auto;display: none;padding: 5px;font-size: .75em;font-family:'Free Monospaced';line-height:1.2em;font-weight: 800;font-family: 'Free Monospaced';"><span id="pwd"></span>
                 </div>
-                <textarea id="evalCode" name="evalCode" class="codeBox" style="border-color: green;background: white;color: black;" contenteditable="true"></textarea>
-                <div id="evalResult" class="result" contenteditable="true" spellcheck="false"></div>
+                <textarea id="evalCode" class="console" style="border-color: green;" contenteditable="true"></textarea>
+                <div id="evalResult" class="console" contenteditable="true" spellcheck="false"></div>
             </div>
         </div>
         <div>
@@ -238,7 +238,7 @@
                     </div>
                     <div>
                         <div>
-                            <span id="debugAppsSP" title="Please for the debug apps to be processed">
+                            <span id="debugAppsSP" title="">
                                 <select id="debugApps">
                                    <option>Please Wait</option>
                                  </select>
