Tested on Mac Changed Keyboard shortcut for Mac Whole snippet to Option+Enter

--- a/com.creative-scripts.cstk/html/index.html
+++ b/com.creative-scripts.cstk/html/index.html
@@ -160,7 +160,7 @@
                     </div>
                     <div style="display:inline-block;text-align:left;font-size:.8em;line-height:1.2em;position: relative;top:6px;">
                         <div>Press Shift+Enter to execute only selected lines</div>
-                        <div>Press Shift+Ctrl+A to execute the whole snippet</div>
+                        <div id="wholeSnippetDV">Press Shift+Ctrl+A to execute the whole snippet</div>
                     </div>
                 </div>
                 <!-- Icons from Font Awesome -->
