Fixed feedback error on button click of JS console Added console border color change on sending code and receiving the callback This should hopefully reassure the user that something done on the other side even when no other indication is shown

--- a/com.creative-scripts.cstk/html/index.html
+++ b/com.creative-scripts.cstk/html/index.html
@@ -107,7 +107,7 @@
     <div id="main" class="hostElt whiteBox">
         <div id="console" style="text-align: center;">
             <div>
-                <span title="Version 2.0<br>Last Modified: 7 Jan 18" style="font-size: 18px; font-weight: 900;">CSTK</span>
+                <span title="Version 2.0<br>Last Modified: 14 Jan 18" style="font-size: 18px; font-weight: 900;">CSTK</span>
                 <span style="font-size: .6em;">
                     <span>&copy; </span>
                 <span class="csButton blueButton" id="CreativeScripts" title="<span style='text-align:center'><div><img src='../img/CreativeScriptsLogo.png' style='width:200px;'></img><div><h1>www.creative-scripts.com</h1>Custom Scripts &amp; Extensions</span>">Creative Scripts
@@ -159,7 +159,7 @@
                         <i class="fas fa-terminal fa-lg fabt"></i> EXECUTE <span id="EvalMode">JSX</span></span>
                     </div>
                     <div style="display:inline-block;text-align:left;font-size:.8em;line-height:1.2em;position: relative;top:6px;">
-                        <div>Press Shift+Enter to execute only selected lines</div>
+                        <div id="lineSnippetDV">Press Shift+Enter to execute only selected lines</div>
                         <div id="wholeSnippetDV">Press Shift+Ctrl+A to execute the whole snippet</div>
                     </div>
                 </div>
