Correct JS Eval callback to output on falsey results and added option for "undefined" result More changes to README.md

--- a/com.creative-scripts.cstk/html/index.html
+++ b/com.creative-scripts.cstk/html/index.html
@@ -105,10 +105,10 @@
     <div id="main" class="hostElt whiteBox">
         <div id="console" style="text-align: center;">
             <div>
-                <span title="Version 2.0<br>Last Modified: 14 Jan 18" style="font-size: 18px; font-weight: 900;">CSTK</span>
+                <span title="Version 2.0<br>Last Modified: 26 Jan 18" style="font-size: 18px; font-weight: 900;">CSTK</span>
                 <span style="font-size: .6em;">
                     <span>&copy; </span>
-                <span class="csButton blueButton" id="CreativeScripts" title="<span style='text-align:center'><div><img src='../img/CreativeScriptsLogo.png' style='width:200px;'></img><div><h1>www.creative-scripts.com</h1>Custom Scripts &amp; Extensions</span>">Creative Scripts
+                <span class="csButton blueButton" id="CreativeScripts" title="<span style='text-align:center'><div><img src='../img/CreativeScriptsLogo.png' style='width:200px;'></img><div><h1>www.creative-scripts.com</h1>Custom Scripts, Extensions<br>and Applications</span>">Creative Scripts
                 </span>
                 <span id="lisenceBT" class="csButton blueButton" style="padding: 4px 4px 0px;margin: 0 4px 0 0;position: relative;top: 2px;" title="Lisence CSTK for $10<br>CSTK is trialware<br>It does not have a time trial limit<br><b>BUT</b> please purchase when you are satisfied<br>it's worth the $10">
                 <i class="fab fa-paypal fa-2x fabt"></i>
@@ -147,6 +147,9 @@
                     </span>
                     <div id="resultModeDV">
                         <i class="far fa-check-square fa-lg fabt"></i> Include whole snippets in results
+                    </div>
+                    <div id="undefinedDV">
+                        <i class="far fa-check-square fa-lg fabt"></i> Write "undefined" to JS console
                     </div>
                 </div>
             </div>
