--- a/com.creative-scripts.cstk/html/index.html
+++ b/com.creative-scripts.cstk/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link id="hostStyle" rel="stylesheet" href="../css/styles.css" />
-    <link id="hostStyle" rel="stylesheet" href="../css/fontawesome-all.css" />
+    <link rel="stylesheet" href="../css/fontawesome-all.css" />
     <link rel="stylesheet" href="../js/libs/jquery-ui-1.12.1.custom/jquery-ui.css">
     <script>
     if (typeof module === 'object') {
